--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <!-- FAQ Modal (has to have the body tag as a root to keep all stylings)-->
-    <div class="modal fade" id="faqModal" tabindex="-1" aria-labelledby="faqModalLabel" aria-hidden="true">
+    <div class="modal fade" id="faqModal" tabindex="-1" aria-labelledby="faq-modal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="faqModalLabel">Frequently Asked Questions</h5>
+                    <h5 class="modal-title" id="faq-modal">Frequently Asked Questions</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -106,11 +106,11 @@
                             <!-- Button to trigger Weather modal-->
                             <button type="button" class="btn btn-info" id="weatherButton" data-toggle="modal" data-target="#weatherModal">Change Location</button>
                             <!-- Weather Modal -->
-                            <div class="modal fade" id="weatherModal" tabindex="-1" role="dialog" aria-labelledby="weatherModalLabel" aria-hidden="true">
+                            <div class="modal fade" id="weatherModal" tabindex="-1" role="dialog" aria-labelledby="weather-modal" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="weatherModalLabel">CHANGE LOCATION</h5>
+                                            <h5 class="modal-title" id="weather-modal">CHANGE LOCATION</h5>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
@@ -155,7 +155,7 @@
                             <!-- Button to trigger movie modal -->
                             <button class="btn btn-info" id="movieButton" data-toggle="modal" data-target="#movieModal">See Information</button>
                             <!-- Movie Modal -->
-                            <div class="modal fade" id="movieModal" tabindex="-1" role="dialog" aria-labelledby="movieModalLabel" aria-hidden="true">
+                            <div class="modal fade" id="movieModal" tabindex="-1" role="dialog" aria-labelledby="movie-title-modal" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
@@ -200,7 +200,7 @@
                         <!-- Button to trigger meal modal -->
                         <button class="btn btn-info" id="mealButton" data-toggle="modal" data-target="#mealModal">Check Details</button>
                         <!-- Meal Modal -->
-                        <div class="modal fade" id="mealModal" tabindex="-1" role="dialog" aria-labelledby="mealModalLabel" aria-hidden="true">
+                        <div class="modal fade" id="mealModal" tabindex="-1" role="dialog" aria-labelledby="modal-meal-title" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-scrollable" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
