added class to faq icon to make it bigger

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="col faq-box">
                     <!-- Button to trigger FAQ modal -->
                     <button type="button" class="btn" data-toggle="modal" data-target="#faqModal">
-                        <i class="far fa-question-circle"></i>
+                        <i class="far fa-question-circle fa-2x"></i>
                     </button>
                 </div>
             </div>
