deleted unnecessary code from joke block

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="row">
                 <!-- Joke Content -->
-                <div class="col innerbox-content">
+                <div class="col innerbox-content text-center">
                     <p id="joke"></p>
                 </div>
             </div>
