changed image size for different screen sizes for meal-image

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <!-- Meal Content -->
                     <div class="col innerbox-content">
                         <p class="text-center" id="meal-title"></p>
-                        <img src="" id="meal-image" title="meal of the day" class="img-fluid">
+                        <img src="" id="meal-image" title="meal of the day">
                     </div>
                 </div>
                 <div class="row">
