--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="row">
                 <!-- Joke Content -->
                 <div class="col innerbox-content text-center">
-                    <p id="joke"></p>
+                    <p id="joke">Ooops... Sorry we ran out of jokes.</p>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                         <!-- Weather Content -->
                         <div class="col innerbox-content two-boxes-row-height">
                             <div>
-                                <div id="location-name"></div>
+                                <div id="location-name">Sorry, todays weather could not be loaded.</div>
                                 <img src="" title="weather" id="weather-icon">
                                 <div id="weather-main-temp"></div>
                                 <div id="weather-main-feel"></div>
@@ -146,7 +146,7 @@
                     <div class="row">
                         <!-- Movie Content -->
                         <div class="col innerbox-content two-boxes-row-height">
-                            <p id='movie-title'></p>
+                            <p id='movie-title'>Sorry todays movie could not be loaded.</p>
                             <img src="" id="movie-image" alt="movie of the day">
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                 <div class="row">
                     <!-- Meal Content -->
                     <div class="col innerbox-content">
-                        <p class="text-center" id="meal-title"></p>
+                        <p class="text-center" id="meal-title">Sorry, todays meal could not be loaded.</p>
                         <img src="" id="meal-image" title="meal of the day">
                     </div>
                 </div>
