deleted fixed-top class from header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <!-- HEADER -->
     <header>
-        <div class="container-fluid header-style fixed-top">
+        <div class="container-fluid header-style">
             <div class="row text-right">
                 <!-- FAQ -->
                 <div class="col faq-box">
