--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container-fluid header-style">
             <div class="row text-right">
                 <!-- FAQ -->
-                <div class="col faq-box">
+                <div class="col">
                     <!-- Button to trigger FAQ modal -->
                     <button type="button" class="btn" data-toggle="modal" data-target="#faqModal">
                         <i class="far fa-question-circle fa-2x"></i>
