changed structure for meal modal

--- a/index.html
+++ b/index.html
@@ -211,11 +211,13 @@
                                     <div class="modal-body">
                                         <div class="container">
                                             <div class="row">
-                                                <div class="col-md-6">
+                                                <div class="col">
                                                     <h6>Ingredients</h6>
                                                     <div id="mealIngredientsList"></div>
                                                 </div>
-                                                <div class="col-md-6">
+                                            </div>
+                                            <div class="row">
+                                                <div class="col">
                                                     <h6>Preparation</h6>
                                                     <p id="meal-preparation"></p>
                                                 </div>
