--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
     <header>
         <div class="container-fluid header-style fixed-top">
             <div class="row">
-                <div class="col-2"></div>
                 <!-- Page Headline -->
-                <div class="col-8">
+                <div class="col-8 offset-2">
                     <h1 class="text-uppercase page-headline">My Daily Dashboard</h1>
                 </div>
                 <!-- FAQ -->
