--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">    <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/62b16d6f9d.js" crossorigin="anonymous"></script>
     <title>My Daily Dashboard</title>
+    <link rel="icon" type="image/png" href="favicon.ico"/>
 </head>
 <body>
     <!-- FAQ Modal (has to have the body tag as a root to keep all stylings)-->
